--- a/css/style.css
+++ b/css/style.css
@@ -832,12 +832,16 @@ there.
   -o-transition: all 0.4s ease; }
 
 body {
+  font-size: 16px;
   font-family: 'Halant', sans-serif; }
+  body p {
+    margin: 0; }
   body nav {
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
-    color: #929292; }
+    color: #929292;
+    min-height: 5vh; }
     body nav.container {
       border-bottom: 3px #929292 solid; }
     body nav ul {
@@ -854,3 +858,24 @@ body {
 .logo-holder img {
   width: 50%;
   height: auto; }
+
+#hero {
+  min-height: 93vh;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  #hero .hero-slogan {
+    height: 100%;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    font-size: 5rem; }
+  #hero .redacted:after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 25px;
+    background: black;
+    top: 20px;
+    left: 0; }
