--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,18 +31,28 @@ $primaryblue: #020951;
 	font-family: 'Halant', sans-serif;
 }
 
+@mixin vertical-align-me{
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
 
 ///  generics
 
 
 body{
+	font-size: 16px;
 	@include default_serif;
+	p{
+		margin: 0;
+	}
 	nav{
 		text-align: center;
 		@include default_sansserif;
 		text-transform: uppercase;
 		color: $primarygrey;
-		
+		min-height: 5vh;
 		&.container{
 			border-bottom: 3px $primarygrey solid;
 		}
@@ -60,7 +70,6 @@ body{
 			}
 		}
 	}
-
 }
 
 
@@ -70,5 +79,32 @@ body{
 	img{
 		width: 50%;
 		height: auto;
+	}
+}
+///// hero section
+#hero{
+	min-height:93vh;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	.hero-slogan{
+		height: 100%;
+		@include default_sansserif;
+		text-transform: uppercase;
+		font-size: 5rem;
+
+	}
+	.redacted{
+		&:after{
+			position: absolute;
+			content: "";
+			width: 100%;
+			height: 25px;
+			background: black;
+			top: 20px;
+			left: 0;
+		}
 	}
 }
