--- a/css/style.css
+++ b/css/style.css
@@ -832,13 +832,38 @@ there.
   -o-transition: all 0.4s ease; }
 
 body {
-  font-size: 16px;
-  font-family: 'Halant', sans-serif; }
+  font-family: 'Roboto Slab', sans-serif; }
   body p {
     margin: 0; }
+  body button {
+    color: #E12100;
+    border: none;
+    padding: 0;
+    border-radius: 0;
+    font-size: 1.75rem;
+    font-weight: 400;
+    font-family: 'Rubik', sans-serif; }
+    body button:before {
+      position: absolute;
+      text-align: center;
+      z-index: -1;
+      content: "";
+      background: lightgrey;
+      top: 15px;
+      left: -10px;
+      height: 8px;
+      width: 100%;
+      padding: 0 10px; }
+  body h2 {
+    margin: 10px 0;
+    font-size: 4rem;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-family: 'Rubik', sans-serif;
+    letter-spacing: 1px; }
   body nav {
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Rubik', sans-serif;
     text-transform: uppercase;
     color: #929292;
     min-height: 5vh; }
@@ -854,13 +879,16 @@ body {
       letter-spacing: 1px; }
       body nav li:hover {
         color: #E12100; }
+  body .gridder {
+    width: 100%;
+    background: url("../images/graphy/graphy.png"); }
 
 .logo-holder img {
-  width: 50%;
+  width: 65%;
   height: auto; }
 
 #hero {
-  min-height: 93vh;
+  min-height: 95vh;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -868,14 +896,93 @@ body {
   align-items: center; }
   #hero .hero-slogan {
     height: 100%;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Rubik', sans-serif;
+    margin: 0 0 15px 0;
     text-transform: uppercase;
     font-size: 5rem; }
-  #hero .redacted:after {
+    #hero .hero-slogan p {
+      margin: -20px 0; }
+  #hero .subtitle {
+    font-size: 2rem;
+    font-weight: 300; }
+  #hero button {
+    margin: 5% 0 0 0; }
+  #hero .redacted {
+    color: #929292; }
+    #hero .redacted:after {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 27px;
+      background: black;
+      top: 16px;
+      left: 0; }
+
+#game-blurb {
+  background: url("../images/city-dark.jpeg") no-repeat;
+  background-size: cover;
+  padding: 25px;
+  color: white; }
+  #game-blurb p {
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.6);
+    font-weight: lighter; }
+    #game-blurb p.offset-by-three {
+      text-align: center; }
+    #game-blurb p.four {
+      background: #E12100;
+      color: white;
+      text-align: center; }
+  #game-blurb .row {
+    margin: 0 0 25px 0; }
+    #game-blurb .row:last-child {
+      margin: 0; }
+
+#char-classes .character-gallery {
+  width: 100%;
+  z-index: 1; }
+
+#char-classes .character {
+  height: 400px;
+  width: 20%;
+  float: left;
+  background: pink; }
+  #char-classes .character .summary {
     position: absolute;
-    content: "";
-    width: 100%;
-    height: 25px;
-    background: black;
-    top: 20px;
-    left: 0; }
+    bottom: -160px;
+    left: 0px;
+    height: 200px;
+    background: blue; }
+    #char-classes .character .summary h4 {
+      padding: 5px;
+      margin: 0;
+      font-family: 'Rubik', sans-serif;
+      text-transform: uppercase;
+      font-size: 1.8rem;
+      color: white;
+      letter-spacing: 1px;
+      width: 95%; }
+  #char-classes .character.cypher {
+    background: url("https://placeimg.com/200/1000/people") no-repeat;
+    background-size: cover; }
+  #char-classes .character.pointman {
+    background: url("https://placeimg.com/200/1000/people") no-repeat;
+    background-size: cover; }
+  #char-classes .character.faceman {
+    background: url("https://placeimg.com/200/1000/people") no-repeat;
+    background-size: cover; }
+  #char-classes .character.soldier {
+    background: url("https://placeimg.com/200/1000/people") no-repeat;
+    background-size: cover; }
+  #char-classes .character.scout {
+    background: url("https://placeimg.com/200/1000/people") no-repeat;
+    background-size: cover; }
+  #char-classes .character .char-description {
+    z-index: 10;
+    background: white; }
+
+#char-classes .character-details {
+  z-index: 10;
+  background: white; }
+  #char-classes .character-details .skills, #char-classes .character-details .proficiencies {
+    margin: 0 0 15px 0; }
