--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,10 +25,10 @@ $primaryblue: #020951;
 
 ///mixins
 @mixin default_sansserif{
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Rubik', sans-serif;
 }
 @mixin default_serif{
-	font-family: 'Halant', sans-serif;
+	font-family: 'Roboto Slab', sans-serif;
 }
 
 @mixin vertical-align-me{
@@ -42,10 +42,40 @@ $primaryblue: #020951;
 
 
 body{
-	font-size: 16px;
+	
 	@include default_serif;
 	p{
 		margin: 0;
+	}
+	button{
+		color: $primaryred;
+		border: none;
+		padding: 0;
+		border-radius: 0;
+		font-size: 1.75rem;
+		font-weight: 400;
+		@include default_sansserif;
+
+		 &:before{
+			position: absolute;
+			text-align: center;
+			z-index: -1;
+			content: "";
+			background: lightgrey;
+			top: 15px;
+			left: -10px;
+			height: 8px;
+			width: 100%;
+			padding: 0 10px;
+		 }
+	}
+	h2{
+		margin: 10px 0;
+		font-size: 4rem;
+		text-transform: uppercase;
+		font-weight: 400;
+		@include default_sansserif;
+		letter-spacing: 1px;
 	}
 	nav{
 		text-align: center;
@@ -70,6 +100,10 @@ body{
 			}
 		}
 	}
+	.gridder{
+		width:100%;
+		background: url('../images/graphy/graphy.png');
+	}
 }
 
 
@@ -77,13 +111,13 @@ body{
 //// document formal
 .logo-holder{
 	img{
-		width: 50%;
+		width: 65%;
 		height: auto;
 	}
 }
 ///// hero section
 #hero{
-	min-height:93vh;
+	min-height:95vh;
 	text-align: center;
 	display: flex;
 	flex-direction: column;
@@ -92,19 +126,124 @@ body{
 	.hero-slogan{
 		height: 100%;
 		@include default_sansserif;
+		margin: 0 0 15px 0;
 		text-transform: uppercase;
 		font-size: 5rem;
+		p{
+			margin: -20px 0;
+		}
 
 	}
+	.subtitle{
+		font-size: 2rem;
+		font-weight: 300;
+	}
+	button{
+		margin: 5% 0 0 0;
+	}
 	.redacted{
+		color: $primarygrey;
 		&:after{
 			position: absolute;
 			content: "";
 			width: 100%;
-			height: 25px;
+			height: 27px;
 			background: black;
-			top: 20px;
+			top: 16px;
 			left: 0;
+		}
+	}
+}
+
+#game-blurb{
+	background: url('../images/city-dark.jpeg') no-repeat;
+	background-size: cover;
+	// min-height: 50vh;
+	padding: 25px;
+	color: white;
+	p{
+		padding: 10px;
+		// background: rgba(255,255,255,.6);
+		background: rgba(0,0,0,.6);
+		font-weight: lighter;
+		&.offset-by-three{
+			text-align: center;
+		}
+		&.four{
+			background: $primaryred;
+			color: white;
+			text-align: center;
+		}
+	}
+	.row{
+		margin: 0 0 25px 0;
+		&:last-child{
+			margin: 0;
+		}
+		
+	}
+}
+
+#char-classes{
+	.character-gallery{
+		width: 100%;
+		z-index: 1;
+	}
+	.character{
+		height: 400px;
+		width: 20%;
+		float: left;
+		background: pink;
+
+		.summary{
+			position: absolute;
+			bottom: -160px;
+			left: 0px;
+			height: 200px;
+			background: blue;
+			h4{
+				padding: 5px;
+				margin: 0;
+				@include default_sansserif;
+				text-transform: uppercase;
+				font-size: 1.8rem;
+				color: white;
+				letter-spacing: 1px;
+				width: 95%;
+			}
+
+		}
+		&.cypher{
+			background: url('https://placeimg.com/200/1000/people') no-repeat;
+			background-size: cover;
+
+		}
+		&.pointman{
+			background: url('https://placeimg.com/200/1000/people') no-repeat;
+			background-size: cover;				
+		}
+		&.faceman{
+			background: url('https://placeimg.com/200/1000/people') no-repeat;
+			background-size: cover;
+		}
+		&.soldier{
+			background: url('https://placeimg.com/200/1000/people') no-repeat;
+			background-size: cover;
+		}
+		&.scout{
+			background: url('https://placeimg.com/200/1000/people') no-repeat;
+			background-size: cover;
+		}
+		.char-description{
+			z-index: 10;
+			background: white;
+		}
+	}
+	.character-details{
+		z-index: 10;
+		background: white;
+		.skills, .proficiencies{
+			margin: 0 0 15px 0;
 		}
 	}
 }
