--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,11 +20,19 @@ $primaryblue: #020951;
   -o-transition:      all 0.4s ease;
 }
 
-.character-gallery{
+.character-gallery,.faction-details{
 		-webkit-transition: all 0.5s ease;
 	  -moz-transition:    all 0.5s ease;
 	  -ms-transition:     all 0.5s ease;
 	  -o-transition:      all 0.5s ease;
+}
+
+a{
+	text-decoration: none;
+	color: inherit;
+	&:hover{
+		color: $primaryred;
+	}
 }
 
 
@@ -117,7 +125,7 @@ body{
 	}
 	.gridder{
 		width:100%;
-		background: url('../images/graphy/graphy.png');
+		background: url('../images/tiny_grid/tiny_grid_@2X.png');
 		// background: none;
 	}
 }
@@ -167,6 +175,14 @@ body{
 			background: black;
 			top: 16px;
 			left: 0;
+			opacity: 1;
+			transition: all .5s ease-in-out;
+	   	-moz-transition: all .5s ease-in-out;
+	   	-webkit-transition: all .5s ease-in-out;
+		}
+		&:hover:after{
+			opacity: 0;
+			left: -100px;
 		}
 	}
 }
@@ -265,10 +281,9 @@ body{
 		li{
 			list-style-type: none;
 			margin: 0;
-			font-size: 1.2rem;
-			font-style: italic;
+			font-size: 1.3rem;
+			// font-style: italic;
 			@include default_sansserif;
-			font-weight: 500;
 			padding: 0 0 0 10px;
 		}
 		p{
@@ -407,6 +422,7 @@ body{
 }
 
 #factions{
+	padding-bottom: 50px;
 	h4{
 		@include default_sansserif;
 		text-transform: uppercase;
@@ -425,7 +441,7 @@ body{
 	.faction-title{
 		background: whitesmoke;
 		padding: 10px;
-		border: 1px dotted black;
+		margin-bottom: 5px;
 		.fa{
 			position: absolute;
 			top: 30%;
@@ -435,6 +451,7 @@ body{
 		}
 	}
 	.faction-details{
+		opacity:0;
 		display: none;
 		h5{
 			@include default_sansserif;
@@ -446,6 +463,9 @@ body{
 		}
 		p{
 			margin: 0 0 15px 0;
+		}
+		.blurb{
+			font-weight: bold;
 		}
 	}
 	.faction-history{
@@ -465,5 +485,41 @@ body{
 	}
 	.expanded{
 		display: block;
+		opacity: 1;
+	}
+}
+
+#get-started{
+	margin-bottom: 100px;
+	.columns{
+		margin: 0;
+	}
+	h4{
+		@include default_sansserif;
+	}
+}
+footer{
+	border-top: 4px solid $primarygrey;
+	a{
+		text-decoration: none;
+		color: $primarygrey;
+	}
+	li{
+		list-style-type: none;
+		text-transform: uppercase;
+		padding: 0;
+		margin: 0;
+		@include default_sansserif;
+	}
+	.links{
+		float: left;
+
+	}
+	.the-creators{
+		float: right;
+		text-align: right;
+		a{
+			display: block;
+		}
 	}
 }
