--- a/scss/style.scss
+++ b/scss/style.scss
@@ -428,6 +428,7 @@ body{
 		text-transform: uppercase;
 		font-size: 3rem;
 		margin: 0;
+
 	}
 	.tagline{
 		padding: 0 0 0 25px;
@@ -442,6 +443,7 @@ body{
 		background: whitesmoke;
 		padding: 10px;
 		margin-bottom: 5px;
+		border-bottom: 4px $primaryblue solid;
 		.fa{
 			position: absolute;
 			top: 30%;
